# veris

./: .env.example  .env.production.example  .env.production.staging.template  .gitignore  BRAND.md  CGWG_SAQ_PLAN.md  CROSS_FRAMEWORK_MAPPING_PLAN.md  DEPLOY.md  DEVELOPER_GUIDE.md  EO100_SUPPORT_PLAN.md  FRAMEWORK_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  MULTI_PARTY_REVIEW_PLAN.md  Makefile  README.md  TESTING_GUIDE.md  TODO.md  bettercoal-architecture.md  docker-compose.prod.yml  docker-compose.yml  legacy-platform-analysis.md  legacy-platform-architecture.md  tdi-platform-analysis.md  veris-master-roadmap.md
ai_engine/: Dockerfile  main.py  pyproject.toml  requirements.txt
backend/: .dockerignore  .env.example  .flake8  Dockerfile  check_assess.py  framework.sql  import_eo100_saq.py  migrate_bettercoal.py  migrate_bettercoal.sql  migrate_cgwg_questionnaires.py  migrate_framework_dump.py  migrate_framework_dump.sql  pyproject.toml  requirements.txt  seed_bettercoal.py  seed_framework_dump.py  seed_orm.py  seed_questionnaire.py  seed_templates.py  test_e2e_phase2.py  v1.py
backend/assessments/: admin.py  models.py
backend/assessments/migrations/: 0001_initial.py  0002_site_contractor_count_site_employee_count_and_more.py  0003_alter_finding_summary_alter_finding_topic.py  0004_uploadedimage.py  0005_add_ai_validation_fields.py  0006_add_assessmentquestion_framework_mappings.py  0007_add_template_models.py  0008_rename_assessments_is_pub_status_idx_assessment__is_publ_64df0e_idx_and_more.py  0009_alter_assessmenttemplate_unique_together.py  0010_noop_unique_together.py  0011_sync_unique_together_state.py  0012_add_canonical_organization_fields.py  0013_alter_assessmenttemplate_organization.py  0014_finding_due_date.py  0015_frameworkimportjob.py  0016_framework_slug.py
backend/assessments/serializers/: __init__.py
backend/assessments/services/: access.py  framework_import.py  validation.py
backend/assessments/views/: __init__.py  base.py  dashboard.py  flat_views.py  framework_import.py  mixins.py  template_views.py  upload_evidence.py  upload_image.py
backend/config/: __init__.py  health.py  settings.py  storage.py  urls.py  urls.py.backup  wsgi.py
backend/config/settings/: base.py  development.py  email.py  production.py  testing.py
backend/knowledge/: admin.py  models.py  services.py
backend/knowledge/migrations/: 0001_initial.py
backend/knowledge/serializers/: __init__.py
backend/knowledge/views/: __init__.py
backend/management/commands/: seed.py
backend/organizations/: admin.py  email_service.py  middleware.py  models.py  permissions.py
backend/organizations/management/commands/: audit_superuser_memberships.py  import_bettercoal.py  import_framework_dump.py  seed.py
backend/organizations/migrations/: 0001_initial.py  0002_alter_organization_id.py  0003_customrole_organizationmembership.py  0004_organizationmembership_current_organisation_name_and_more.py  0005_alter_customrole_options_and_more.py  0006_organizationcreationconfig_invitation.py  0007_organizationsettings_organizationterminology_and_more.py
backend/organizations/serializers/: __init__.py
backend/organizations/views/: __init__.py
backend/reports/: services.py
backend/reports/templates/: report.css  report.html
backend/settings/: apps.py  urls.py  views.py
backend/settings/templates/settings/: api_keys.html  dashboard.html  features.html  framework_settings.html  integrations.html  org_settings.html  theme_settings.html  user_settings.html
backend/tests/: conftest.py
backend/tests/assessments/: test_dashboard_summary.py  test_flat_views.py
backend/tests/organizations/: test_dynamic_rbac.py  test_invitations.py  test_membership.py  test_permissions.py  test_seed_command.py  test_terminology_api.py
backend/tests/themes/: test_theme_serializer.py
backend/tests/users/: test_jwt_auth.py  test_models.py  test_models_isolated.py  test_multi_tenant_isolation.py
backend/themes/: admin.py  models.py  serializers.py  utils.py
backend/themes/migrations/: 0001_initial.py  0002_theme_accent_foreground_color_theme_border_color_and_more.py  0003_theme_accent_color_dark_and_more.py  0004_organizationtheme_delete_theme.py
backend/themes/views/: __init__.py
backend/users/: admin.py  authentication.py  models.py  permissions.py  roles.py  serializers.py  services.py  urls.py
backend/users/migrations/: 0001_initial.py  0002_assessorprofile.py  0003_remove_user_organization_remove_user_role.py  0004_user_biography_user_country_user_direct_phone_number_and_more.py  0005_alter_user_name_alter_user_password.py
backend/users/views/: __init__.py  auth.py
deploy/: Caddyfile
docs/: API.md  ARCHITECTURE.md  COMPETITIVE_LANDSCAPE.md  ESG_FRAMEWORK_MODELS.md  GTM_STRATEGY.md  LOCAL_DEV.md  OPS.md  (+30 more)
(+186 files in other folders)
