[project]
name = "ai-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "fastapi==0.115.6",
    "httpx>=0.27.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "openai>=1.50.0",
    "pinecone-client[grpc]>=5.0.0",
    "pydantic==2.10.*",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.8.0",
    "uvicorn[standard]==0.34.0",
]

[dependency-groups]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]
