[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django==5.1.5",
    "django-cors-headers==4.4.0",
    "django-environ==0.12.0",
    "django-extensions==3.2.3",
    "django-filter==24.3",
    "djangorestframework==3.15.2",
    "djangorestframework-simplejwt==5.4.0",
    "gunicorn==23.0.0",
    "psycopg2-binary==2.9.10",
    "bcrypt>=4.0.1",
    "pillow>=12.2.0",
    "pinecone>=6.0.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "pypdf>=4.0.0",
    "weasyprint>=60.0",
    "django-storages[s3]>=1.14.0",
    "boto3>=1.34.0",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "black==24.10.0",
    "factory-boy==3.3.1",
    "flake8==7.1.1",
    "isort==5.13.2",
    "mypy==1.13.0",
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "pytest-django==4.9.0",
    "pytest-env==1.1.5",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
force_grid_wrap = 0
extend_skip = [".venv", "seed_orm.py"]

[tool.flake8]
max-line-length = 88
ignore = "E501,W503,E203"
exclude = "migrations,.venv"

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
show_error_codes = true
exclude = [".venv/", "migrations/"]
check_untyped_defs = false
disallow_subclassing_any = false

[[tool.mypy.overrides]]
module = "tests.*"
check_untyped_defs = false
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
addopts = "--ds=config.settings.testing --nomigrations --tb=short -q -m 'not profiling'"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "isolated: Unit tests — no DB, no network, pure logic",
    "integrated: Tests that hit the DB via Django ORM / DRF test client",
    "profiling: Performance / load tests (excluded from default run)",
]

[tool.pytest-env]
ENVIRONMENT = "test"
USE_DEFAULT_STATICFILES_STORAGE = "true"

[tool.coverage.run]
source = [".", "config", "organizations", "users", "themes", "assessments", "knowledge"]
omit = ["migrations/*", "tests/*", "config/wsgi.py", "manage.py"]

